Basic game builder